ubuntu/postgres-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
        app: postgres
        tier: postgres
  template:
    metadata:
      labels:
        app: postgres
        tier: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:11.2
        ports:
        - containerPort: 5432
          name: postgredb
  volumeClaimTemplates:
  - metadata:
      name: task-pv-claim
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
