ubuntu/kubedashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    app: kubernetes-dashboard
spec:
  ports:
  - port: 443
    name: kubernetes-dashboard
  type: NodePort 
  selector:
    app: kubernetes-dashboard
