ubuntu/rustapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rustapp
  labels:
    app: rustapp
spec:
  ports:
  - port: 8080
    name: rustapp
  type: NodePort 
  selector:
    app: rustapp
