ubuntu/golang-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: golang-ingress
   namespace: default
spec:
   rules:
   - host: golang.com
     http:
         paths:
           - path: /hello
             pathType: Prefix
             backend:
              service:
                 name: goapp-service
                 port:
                   number: 8080
