ubuntu/postgres-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: postgres-ingress
   namespace: default
spec:
   rules:
   - host: postgres.com
     http:
         paths:
           - path: /
             pathType: Prefix
             backend:
              service:
                 name: postgres
                 port:
                   number: 5432
